# Glyph11

./: .gitignore  README.md  SECURITY.md
.github/workflows/: benchmark.yml  core-tests.yml  cross-bench.yml  package-native.yml  package-pico.yml  pages.yaml  release.yml
Benchmarks/: BenchmarkData.cs  Benchmarks.csproj  FlexibleParserBenchmark.cs  HardenedParserBenchmark.cs  Program.cs  README.md  RequestParserBenchmark.cs  UltraHardenedParserBenchmark.cs
Examples/: README.md
Examples/Glyph11.Example/: Glyph11.Example.csproj  Program.cs
Examples/Glyph11.Native.Example/: Glyph11.Native.Example.csproj  Program.cs
Examples/Glyph11.Pico.Example/: Glyph11.Pico.Example.csproj  Program.cs
bench/: README.md  aggregate.py  gen_payloads.py  run-all.sh
benchmarks/: cross-lang.json  data.js
bindings/dotnet/Glyph11.Bench/: Glyph11.Bench.csproj  Program.cs  README.md
bindings/dotnet/Glyph11.Native/: Glyph11.Native.csproj  Glyph11Chunked.cs  Glyph11Parser.cs  NativeResolver.cs  README.md
bindings/dotnet/Glyph11.Pico/: Glyph11.Pico.csproj  NativeResolver.cs  PicoInterop.cs  PicoParser.cs  README.md
bindings/dotnet/Glyph11.Pico/native/: CMakeLists.txt  pico_shim.c  pico_shim.h
bindings/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
bindings/kotlin/src/main/kotlin/io/glyph11/: Glyph11.kt  Main.kt
core/: .gitignore  CMakeLists.txt
core/bench/: bench.c
core/diff/: Glyph11.Diff.csproj  Native.cs  Program.cs  README.md  run-diff.sh
core/include/: glyph11.h
core/src/: glyph11.c
core/tests/: fuzz_smoke.c  test_glyph11.c
docs/: hugo.yaml
docs/content/benchmarks/: _index.md
docs/content/docs/: _index.md
docs/content/docs/api-reference/: _index.md  parser-limits.md  ultra-hardened-parser.md
docs/content/docs/getting-started/: _index.md  integration.md
docs/content/docs/parsers/: _index.md  flexible-parser.md  ultra-hardened-parser.md
docs/content/docs/performance/: _index.md
docs/content/docs/security/: _index.md  parser-limits.md
docs/static/bench/: data.json  index.html
docs/static/benchmarks/: chart.html
site/: benchmarks.html  data.json  glyph11-native.html  glyph11-pico.html  glyph11.html  index.html  style.css
src/: Glyph11.sln
src/Examples/GenHTTP/Parser/: RequestParser.cs
src/Examples/ServerTest/: Program.cs  ServerTest.csproj
src/Glyph11/: Glyph11.csproj
src/Glyph11/Parser/: ChunkedBodyStream.cs  ParserConstants.cs  ParserLimits.cs
src/Glyph11/Parser/FlexibleParser/: FlexibleParser.Constants.cs  FlexibleParser.FullHeader.ROM.cs
src/Glyph11/Parser/Hardened/: HardenedParser.FullHeader.ROM.cs  HardenedParser.FullHeader.Validated.ROM.cs  HardenedParser.Limits.cs  HardenedParser.TryExtractFullHeader.cs  HardenedParser.TryExtractFullHeaderValidated.cs
src/Glyph11/Parser/UltraHardened/: UltraHardenedParser.FullHeader.ROM.cs  UltraHardenedParser.TryExtractFullHeader.cs
src/Glyph11/Protocol/: BinaryRequest.cs
src/Glyph11/Validation/: BodyFraming.cs  BodyFramingDetector.cs  ChunkedBodyValidator.cs  RequestSemantics.cs
tests/GenHTTP/: Assembly.cs  ClientHandler.cs  GenHTTP.csproj
tests/GenHTTP/Context/: ClientContext.cs  ClientContextPolicy.cs
tests/GenHTTP/Protocol/: IRequest.cs  IResponse.cs  RequestMethod.cs
tests/GenHTTP/Protocol/Raw/: IRawKeyValueList.cs  IRawRequest.cs  IRawRequestTarget.cs
tests/GenHTTP/Types/: RawKeyValueList.cs  RawRequest.cs  RawRequestTarget.cs  Request.cs
tests/GenHTTP/Utils/: AsciiComparer.cs
tests/Tests/: BinaryRequest.Tests.cs  ChunkedBodyStream.Sequence.cs  ChunkedBodyStream.Tests.cs  FlexibleParser.HeaderCompliance.cs  FlexibleParser.TryExtractFullHeader.cs  HardenedParser.Body.cs  HardenedParser.Parsing.cs  HardenedParser.Tests.cs  KeyValueList.Tests.cs  RequestSemantics.Tests.cs  Tests.csproj  UltraHardenedParser.Limits.cs  UltraHardenedParser.Parsing.cs  UltraHardenedParser.Semantics.cs  UltraHardenedParser.StatusCode.cs  UltraHardenedParser.Tests.cs
